pkg/servicemesh/federation/example/config-poc/export/http/passthrough/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  # exports-<service-name>-<namespace>
  name: exports-ratings-mesh1-bookinfo-passthrough
  namespace: mesh1-system
spec:
  selector:
    federation.maistra.io/proxy: mesh2
    service.istio.io/canonical-name: federation-ingress
  servers:
  - hosts:
      # match ISTIO_MUTUAL sni pattern (e.g. outbound_.9080_._.ratings.mesh1-bookinfo.svc.cluster.local)
      - ./*.ratings.mesh1-bookinfo.svc.cluster.local
    port:
      # name = (https|tls)-<port>
      name: https-9080
      # gateway federation port
      number: 15443
      # HTTPS for http and https protocols
      # TLS for tcp based protocols
      protocol: HTTPS
    tls:
      mode: AUTO_PASSTHROUGH
  # additional ports configured the same as above
